--- a/Assignment4/Example4.html
+++ b/Assignment4/Example4.html
@@ -6,6 +6,16 @@
 	<meta http-equiv="X-UA-Compatible" content="IE-edge">
 	<meta name="viewpoint" content="width=device-width, initial-scale=1.0">
 	<title>Example 4</title>
+
+	<style>
+        button {
+            font-size: 50px;
+        }
+
+        #time {
+            font-size: 50px;
+        }
+    </style>
 </head>
 <script>
 	function getTime() {
@@ -28,7 +38,7 @@
 </script>
 
 <body>
-	<input type="button" value="Let It Show" onclick="getTime()">
+	<button onclick="getTime()" id="btn">Let It Show</button>
 	<br>
 	<span id="time"></span>
 </body>
